--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ h2,
 h3,
 h4 {
   margin: 0;
-  font-family: 'Poppins', sans-serif !important;
+  font-family: 'Tahoma', sans-serif !important;
   /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif; */
@@ -24,7 +24,7 @@ body {
 .MuiTypography-body1,
 .MuiPaper-root,
 .MuiPaper-root h2 {
-  color: #2c2560 !important;
+  color: #000 !important;
 }
 
 body {
@@ -45,7 +45,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Amarante', cursive !important;
+  font-family: 'Tahoma', cursive !important;
 }
 
 footer .a:hover {
@@ -64,13 +64,13 @@ footer .a:hover {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+  font-family: 'Tahoma', monospace;
 }
 
 .wallet-button {
   color: #2c2560 !important;
-  font-family: 'Poppins', sans-serif !important;
-  font-size: 1.1rem !important;
+  font-family: 'Tahoma', sans-serif !important;
+  font-size: 1.2rem !important;
   text-align: left !important;
   justify-content: flex-start !important;
   text-transform: none !important;
