--- a/src/index.css
+++ b/src/index.css
@@ -68,7 +68,7 @@ code {
 }
 
 .wallet-button {
-  color: #2c2560 !important;
+  color: #5f6025 !important;
   font-family: 'Tahoma', sans-serif !important;
   font-size: 1.2rem !important;
   text-align: left !important;
@@ -77,5 +77,5 @@ code {
 }
 .wallet-button:hover {
   background-color: black !important;
-  color: #757ce8 !important;
+  color: #ff6c17 !important;
 }
