--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,7 @@ body {
   height: 100%;
   width: 100%; */
   /* min-height: 100vh; */
-  background: linear-gradient(90deg, #071421 0%, #002148 50%, #071421 100%) !important;
+  background-image: linear-gradient(90deg, #071421 0%, #002148 50%, #071421 100%) !important;
   line-height: 1.5;
 }
 
